--- a/frontend-app/src/Page-Components/Upload/Upload.css
+++ b/frontend-app/src/Page-Components/Upload/Upload.css
@@ -1,9 +1,12 @@
-.container {
+.container-upload {
   box-sizing: border-box;
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
 }
 
 .file-upload-form {
-  width: 600px;
+  width: 100%;
   margin: 0 auto;
   margin-top: 20px;
 }
@@ -45,4 +48,43 @@
 .drop-container input {
   border-radius: 10px;
   padding: 40px;
+}
+
+
+.upload_input {
+  color: rgba(0, 0, 0, .87);
+  border-bottom-color: rgba(0, 0, 0, .42);
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: .009375em;
+  text-decoration: inherit;
+  text-transform: inherit;
+  align-self: flex-end;
+  box-sizing: border-box;
+  padding: 20px 16px 6px;
+  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: none;
+  border-bottom: 1px solid;
+  border-radius: 4px 4px 0 0;
+  background: rgb(245, 245, 245);
+}
+
+.upload_normal_input{
+  width: 100%;
+  height: 56px;
+}
+
+.upload_textarea{
+  width: 100%;
+  outline: none;
+  resize: none;
+}
+
+.upload_input:hover {
+  border-bottom-color: rgba(0, 0, 0, .87);
+  background: #ececec;
+}
+
+.upload_input:focus {
+  border-color: #6200ee;
 }
